--- a/css/CSSCommun.css
+++ b/css/CSSCommun.css
@@ -55,7 +55,7 @@ h6 {
 h1 {
   /*Texte*/
   font-weight: 700;
-  font-size: 40px;
+  font-size: 24px;
 }
 
 h2 {
@@ -215,7 +215,7 @@ button:hover:after {
 /*HEADER*/
 .logo {
   /*Dimensions*/
-  width: 200px;
+  width: 162px;
 }
 
 .menu {
@@ -223,10 +223,11 @@ button:hover:after {
   z-index: 1;
 
   /*Dimensions*/
-  height: 96px;
+  height: 63px;
   width: 100%;
 
   /*Sytle*/
+  box-shadow: 0px 2px 4px rgb(0, 0, 0, 0.15);
   background-color: white;
 }
 
@@ -234,7 +235,7 @@ button:hover:after {
 footer {
   /*Dimensions*/
   width: 100%;
-  height: 114px;
+  height: 186px;
 
   /*Flex*/
   display: flex;
@@ -248,29 +249,29 @@ footer {
 .for_padding {
   /*Dimensions*/
   width: 100%;
-  height: 54px;
-  padding: 30px 25px 30px 25px;
+  height: 142px;
+  padding: 22px 25px 22px 25px;
 
   /*Flex*/
   display: flex;
-  justify-content: end;
+  justify-content: start;
   align-items: end;
 }
 
 .ft_ctn {
   /*Flex*/
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-items: end;
+  align-items: start;
   flex-wrap: wrap;
   gap: 16px;
 }
 
 .ft_txt_ctn {
-  /*Dimensions*/
-  height: 20px;
-
   /*Flex*/
+  align-items: start;
+  flex-direction: column;
   gap: 7px;
 }
 
@@ -288,7 +289,7 @@ footer {
 
   /*Flex*/
   display: flex;
-  justify-content: center;
+  justify-content: start;
   gap: 11px;
 
   /*Texte*/
@@ -324,59 +325,58 @@ footer {
   font-weight: 400;
 }
 
-/* Small devices (phones, less than 768px) */
-@media (max-width: 767.98px) {
+/* Big devices (bigger than phones, more than 768px) */
+@media (min-width: 767.98px) {
   h1 {
     /*Texte*/
-    font-size: 24px;
+    font-size: 40px;
   }
 
   /*HEADER*/
   .menu {
     /*Dimensions*/
-    height: 63px;
+    height: 96px;
 
     /*Style*/
-    box-shadow: 0px 2px 4px rgb(0, 0, 0, 0.15);
+    box-shadow: unset;
   }
 
   .logo {
     /*Dimensions*/
-    width: 162px;
+    width: 200px;
   }
 
   /*FOOTER*/
   footer {
     /*Dimensions*/
-    height: 186px;
+    height: 114px;
   }
 
   .for_padding {
     /*Dimensions*/
-    height: 142px;
-    padding: 22px 25px 22px 25px;
+    height: 54px;
+    padding: 30px 25px 22px 30px;
 
     /*Flex*/
-    justify-content: start;
+    justify-content: end;
   }
 
   .ft_ctn {
     /*Flex*/
-    align-items: start;
-    flex-direction: column-reverse;
-    gap: 16px;
+    align-items: end;
+    flex-direction: row-reverse;
   }
 
   .ft_txt_ctn {
     /*Dimensions*/
-    height: auto;
+    height: 20px;
 
     /*Flex*/
-    align-items: start;
-    flex-direction: column;
+    align-items: end;
+    flex-direction: row;
   }
 
   .ft_txt_bold {
-    justify-content: start;
+    justify-content: center;
   }
 }
