--- a/css/Homepage.css
+++ b/css/Homepage.css
@@ -9,6 +9,7 @@
 
   /*Style*/
   background-color: var(--nml-gry);
+  box-shadow: 0px 4px 4px rgb(0, 0, 0, 0.25);
 }
 
 .hp_ctn,
@@ -24,7 +25,7 @@
 .hero,
 .hero_txt {
   /*Flex*/
-  gap: 30px;
+  gap: 15px;
 }
 
 .hero {
@@ -141,7 +142,7 @@
   position: relative;
 
   /*Dimensions*/
-  width: 490px;
+  width: 340px;
   height: 251px;
 
   /*Style*/
@@ -202,20 +203,20 @@
   color: #008766;
 }
 
-/* Small devices (phones, less than 768px) */
-@media (max-width: 767.98px) {
+/* Big devices (bigger than phones, more than 768px) */
+@media (min-width: 767.98px) {
   .localisation {
     /*Style*/
-    box-shadow: 0px 4px 4px rgb(0, 0, 0, 0.25);
+    box-shadow: unset;
   }
 
   .hero_txt {
     /*Flex*/
-    gap: 15px;
+    gap: 30px;
   }
 
   .card {
     /*Dimensions*/
-    width: 340px;
+    width: 490px;
   }
 }
