--- a/css/CSSCommun.css
+++ b/css/CSSCommun.css
@@ -325,6 +325,38 @@ footer {
   font-weight: 400;
 }
 
+/*Animation loading*/
+.loading {
+  animation: loading;
+  animation-delay: 2000ms;
+  animation-fill-mode: forwards;
+  animation-duration: 0s;
+}
+
+.loaded {
+  animation: loading;
+  animation-direction: reverse;
+  animation-delay: 2000ms;
+  animation-fill-mode: forwards;
+  animation-duration: 0s;
+  opacity: 0;
+  height: 0px;
+  overflow: hidden;
+}
+
+@keyframes loading {
+  0% {
+    height: 100%;
+    opacity: 1;
+    display: flex;
+  }
+  100% {
+    height: 0%;
+    opacity: 0;
+    display: none;
+  }
+}
+
 /* Big devices (bigger than phones, more than 768px) */
 @media (min-width: 767.98px) {
   h1 {
